2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/framework.make ($(DUMMY_FRAMEWORK_FILE)): Return the
	real complete installation path into +frameworkPath; return nil
	into +frameworkEnv.  These methods are currently unused, but
	future versions of gnustep-base might read +frameworkPath to have
	a better chance of finding the framework on disk.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* target.make (TARGET_LIB_DIR): (MacOS-Server 1.0, OpenStep 4.x):
	Variable removed.  Use GNUSTEP_LIBRARIES instead to get the same
	effect.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (install): Install GNUstep.sh, GNUstep.csh,
	filesystem.sh, filesystem.csh, ld_lib_path.sh, ld_lib_path.csh as
	non-executables as they are to be sourced, not executed
	(Suggestion from Richard).

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUstep.conf.in (GNUSTEP_MAKEFILES): New variable.
	* GNUstep.csh.in: By default, set GNUSTEP_MAKEFILES to the
	configure default if not set.
	* GNUstep.sh.in: Same change.
	* gnustep-config.in: Same change.
	
	* openapp.in: Updated to use new filesystem config.
	* opentool.in: Updated to use new filesystem config; also,
	remove unused check for empty GNUSTEP_MAKEFILES after
	GNUstep.sh has been sourced.
	
2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (distclean): Remove GNUstep.conf.
	Do not remove GNUsteprc.
	(generated-files): Added GNUstep.conf.
	(GNUstep.conf): New rule to regenerate it.
	* GNUstep.conf.in: Added all the new filesystem options with
	explanations on what they mean.
	
2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	Warning: the software will be unstable for some time.  Don't
	upgrade from trunk if you need stability.
	* configure.ac: Set default values for GNUSTEP_SYSTEM_TOOLS,
	GNUSTEP_SYSTEM_APPS, GNUSTEP_SYSTEM_LIBRARY, etc. variables and
	export them.  Create filesystem.make, filesystem.sh and