@@ -1,90 +1,90 @@
-## This is the GNUstep configuration file.
+# This is the GNUstep configuration file.
 
-## Any line starting with a '#' is a comment.
-## Empty lines are ignored.
-## Every other line in this file must be of the form
-##   XXX=YYY
-## where there should be no spaces around the '=' (this is because we
-## include this file in shell scripts and makefiles, and sh syntax
-## requires no spaces around the '=').
-##
-## Standard sh quotes can be used in YYY but only at runtime; they can 
-## not be used while building.
+# Any line starting with a '#' is a comment.
+# Empty lines are ignored.
+# Every other line in this file must be of the form
+#   XXX=YYY
+# where there should be no spaces around the '=' (this is because we
+# include this file in shell scripts and makefiles, and sh syntax
+# requires no spaces around the '=').
+#
+# Standard sh quotes can be used in YYY but only at runtime; they can 
+# not be used while building.
 
-## GNUstep can use up to 4 domains at the same time.  They are System,
-## Local, Network and User.  You can install your programs / resources
-## in any of these domains.  This file mostly deals with configuring
-## how the domains map to your filesystem.
+# GNUstep can use up to 4 domains at the same time.  They are System,
+# Local, Network and User.  You can install your programs / resources
+# in any of these domains.  This file mostly deals with configuring
+# how the domains map to your filesystem.
 
-## IMPORTANT: Don't delete lines from this file unless you want
-## the values hardcoded in the packages to be used.  If you want
-## to suppress the local domain, set all its paths to be the same
-## as the system domain.  If you want to suppress the network domain,
-## set all its paths to be the same as the local domain.  If you
-## want to suppress the user domain, set its paths to be the same
-## as the network domain.  You can not suppress the system domain.
+# IMPORTANT: Don't delete lines from this file unless you want
+# the values hardcoded in the packages to be used.  If you want
+# to suppress the local domain, set all its paths to be the same
+# as the system domain.  If you want to suppress the network domain,
+# set all its paths to be the same as the local domain.  If you
+# want to suppress the user domain, set its paths to be the same
+# as the network domain.  You can not suppress the system domain.
 
-## These GNUSTEP_*_ROOT variables are obsolete, and will be removed.
+# These GNUSTEP_*_ROOT variables are obsolete, and will be removed.
 GNUSTEP_SYSTEM_ROOT=@GNUSTEP_SYSTEM_ROOT@
 GNUSTEP_LOCAL_ROOT=@GNUSTEP_LOCAL_ROOT@
 GNUSTEP_NETWORK_ROOT=@GNUSTEP_NETWORK_ROOT@
 
-## The name of the user config file.  This file can override
-## some settings in this file.  Usually used by users that want
-## to install things into their GNUstep user domain and/or have
-## many such domains.
+# The name of the user config file.  This file can override
+# some settings in this file.  Usually used by users that want
+# to install things into their GNUstep user domain and/or have
+# many such domains.
 GNUSTEP_USER_CONFIG_FILE=@GNUSTEP_USER_CONFIG_FILE@
 
-## The name of the user directory, if any.  This is obsolete,
-## and will be removed.
+# The name of the user directory, if any.  This is obsolete,
+# and will be removed.
 GNUSTEP_USER_DIR=@GNUSTEP_USER_DIR@
 
-## The name of the user directory where defaults (eg, preferences) are
-## stored.  If it does not start with a '/', it will be considered
-## relative to the user home directory.
+# The name of the user directory where defaults (eg, preferences) are
+# stored.  If it does not start with a '/', it will be considered
+# relative to the user home directory.
 GNUSTEP_USER_DEFAULTS_DIR=@GNUSTEP_USER_DEFAULTS_DIR@
 
 
-## This is where the gnustep-make Makefiles are installed.
-## Traditionally, this is /usr/GNUstep/System/Library/Makefiles
+# This is where the gnustep-make Makefiles are installed.
+# Traditionally, this is /usr/GNUstep/System/Library/Makefiles
 GNUSTEP_MAKEFILES=@GNUSTEP_MAKEFILES@
 
 
-## This is where System GUI Applications get installed.
-## Traditionally it is /usr/GNUstep/System/Apps.
+# This is where System GUI Applications get installed.
+# Traditionally it is /usr/GNUstep/System/Apps.
 GNUSTEP_SYSTEM_APPS=@GNUSTEP_SYSTEM_APPS@
 
-## This is where System Command-Line Tools get installed.
-## Traditionally it is /usr/GNUstep/System/Tools.
+# This is where System Command-Line Tools get installed.
+# Traditionally it is /usr/GNUstep/System/Tools.
 GNUSTEP_SYSTEM_TOOLS=@GNUSTEP_SYSTEM_TOOLS@
 
-## This is where System resources get installed.  This directory will
-## contain a lot of executable code since *step traditionally likes to
-## bundle executables and resources together.
-## Traditionally it is /usr/GNUstep/System/Library.
+# This is where System resources get installed.  This directory will
+# contain a lot of executable code since *step traditionally likes to
+# bundle executables and resources together.
+# Traditionally it is /usr/GNUstep/System/Library.
 GNUSTEP_SYSTEM_LIBRARY=@GNUSTEP_SYSTEM_LIBRARY@
 
-## This is where System headers get installed.  They are the
-## library .h headers.
-## Traditionally it is /usr/GNUstep/System/Library/Libraries/Headers.
+# This is where System headers get installed.  They are the
+# library .h headers.
+# Traditionally it is /usr/GNUstep/System/Library/Libraries/Headers.
 GNUSTEP_SYSTEM_HEADERS=@GNUSTEP_SYSTEM_HEADERS@
 
-## This is where System libraries get installed.  By libraries we mean
-## the shared/static object files that you can link into programs.
-## Traditionally it is /usr/GNUstep/System/Library/Libraries/
+# This is where System libraries get installed.  By libraries we mean
+# the shared/static object files that you can link into programs.
+# Traditionally it is /usr/GNUstep/System/Library/Libraries/
 GNUSTEP_SYSTEM_LIBRARIES=@GNUSTEP_SYSTEM_LIBRARIES@
 
-## This is where System documentation get installed.  This is known
-## not to contain any executable, so we keep it separate.
-## Traditionally it is /usr/GNUstep/System/Library/Documentation/
+# This is where System documentation get installed.  This is known
+# not to contain any executable, so we keep it separate.
+# Traditionally it is /usr/GNUstep/System/Library/Documentation/
 GNUSTEP_SYSTEM_DOCUMENTATION=@GNUSTEP_SYSTEM_DOCUMENTATION@
 
-## This is where System man pages get installed.
-## Traditionally it is /usr/GNUstep/System/Library/Documentation/man/
+# This is where System man pages get installed.
+# Traditionally it is /usr/GNUstep/System/Library/Documentation/man/
 GNUSTEP_SYSTEM_DOCUMENTATION_MAN=@GNUSTEP_SYSTEM_DOCUMENTATION_MAN@
 
-## This is where System info pages get installed.
-## Traditionally it is /usr/GNUstep/System/Library/Documentation/info/
+# This is where System info pages get installed.
+# Traditionally it is /usr/GNUstep/System/Library/Documentation/info/
 GNUSTEP_SYSTEM_DOCUMENTATION_INFO=@GNUSTEP_SYSTEM_DOCUMENTATION_INFO@
 
 
